# Bayyinah-Integrity-Scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  NAMING.md  PARITY.md  QUESTIONS.md  RAILWAY_VOLUME.md  README.md  api.py  bayyinah_v0.py  bayyinah_v0_1.py  nixpacks.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
analyzers/: __init__.py  audio_analyzer.py  base.py  correlation.py  cross_modal_correlation.py  csv_analyzer.py  csv_bidi_payload.py  csv_column_type_drift.py  csv_encoding_divergence.py  csv_oversized_freetext_cell.py  csv_payload_in_adjacent_cell.py  csv_quoted_newline_payload.py  csv_zero_width_payload.py  docx_analyzer.py  docx_comment_payload.py  docx_header_footer_payload.py  docx_metadata_payload.py  docx_microscopic_font.py  docx_orphan_footnote.py  docx_white_text.py  eml_analyzer.py  eml_base64_text_part.py  eml_from_replyto_mismatch.py  eml_header_continuation_payload.py  eml_received_chain_anomaly.py  eml_returnpath_from_mismatch.py  eml_xheader_payload.py  fallback_analyzer.py  format_routing.py  html_analyzer.py  html_comment_payload.py  html_meta_payload.py  html_noscript_payload.py  html_style_content_payload.py  html_template_payload.py  html_title_text_divergence.py  image_analyzer.py  image_jpeg_appn_payload.py  image_png_private_chunk.py  image_png_text_chunk_payload.py  (+32 more)
application/: __init__.py  scan_service.py
bayyinah/: __init__.py  api_helpers.py  counter.py  demo.py  summary_queue.py  summary_worker.py
cli/: __init__.py  __main__.py  main.py
docs/: research.md
docs/adr/: ADR-002-v1_1_5-spatial-index.md  ADR-003-v1_1_6-registry-shortcircuit.md  ADR-004-v1_1_7-single-scan-floor.md
docs/adversarial/: REPORT.md  mughlaq_trap_REPORT.md
docs/adversarial/csv_json_gauntlet/: REPORT.md  build_fixtures.py  results_live.json  results_local.json  run_gauntlet.py
docs/adversarial/docx_gauntlet/: REPORT.md  build_fixtures.py  results_live.json  results_local.json  run_gauntlet.py
docs/adversarial/eml_gauntlet/: REPORT.md  build_fixtures.py  results_live.json  results_local.json  run_gauntlet.py
docs/adversarial/format_routing_gauntlet/: REPORT.md  build_fixtures.py  run_gauntlet.py  verify_live.sh
docs/adversarial/html_gauntlet/: REPORT.md  build_fixtures.py  results_live.json  results_local.json  run_gauntlet.py
docs/adversarial/image_gauntlet/: REPORT.md  build_fixtures.py  results_live.json  results_local.json  run_gauntlet.py
docs/adversarial/pdf_gauntlet/: REPORT.md  build_fixtures.py  results.json  results_local.json  run_gauntlet.py  run_gauntlet_local.py
docs/adversarial/xlsx_gauntlet/: REPORT.md  build_fixtures.py  results_live.json  results_local.json  run_gauntlet.py
docs/benchmarks/: scan_benchmark.py  throughput_single_threaded.py  v1_1_2_scan_timing.md  v1_1_2_throughput_single_threaded.md  v1_1_4_four_density.md  v1_1_4_four_density.py  v1_1_5_rtree_spatial_index.md  v1_1_5_rtree_spatial_index.py  v1_1_6_production_mode.md  v1_1_6_production_mode.py  verify_v1_1_4_deploy.py
docs/landing-mock/: README.md  index.html
docs/landing-mock-v2/: README.md  demo.html  demo.js  fixtures.json  index.html  robots.txt  sitemap.xml
docs/scope/: ADR-001-v1_2_scope.md  file_type_coverage_v1_2.md  v1_1_2_claude_prompt.md  v1_1_2_framework_report.md
docs/v1.1.3/: PLAN.md
docs/v1.1.4/: PHASE0_BASELINE.md
domain/: __init__.py  config.py  content_index.py  cost_classes.py  exceptions.py  finding.py  integrity_report.py  value_objects.py
history/: ASSESSMENT_RESPONSE.md  DEFENSE_CASE_UPDATES.md  FURQAN_CORRESPONDENCE.md  PERPLEXITY_CHALLENGE_READINESS.md  README.md  RESEARCH_PROGRAM_STACK.md
infrastructure/: __init__.py  file_router.py  pdf_client.py  report_formatter.py
legacy/: README.md  __init__.py
papers/: Bayyinah_Thesis_Paper.docx  Bayyinah_White_Paper.docx
scripts/: generate_demo_q3_fixture.py  make-archive.sh  record_landing_fixtures.py
tests/: make_audio_fixtures.py  make_cross_file_fixtures.py  make_csv_fixtures.py  make_docx_fixtures.py  make_eml_fixtures.py  make_html_fixtures.py  make_image_fixtures.py  make_pptx_fixtures.py  make_test_documents.py  make_text_fixtures.py  make_video_fixtures.py  make_xlsx_fixtures.py  test_audio_fixtures.py  test_csv_fixtures.py  test_demo_queue_endpoints.py  test_documented_limits.py  test_docx_fixtures.py  test_eml_fixtures.py  test_fixtures.py  test_html_fixtures.py  test_image_fixtures.py  test_integration.py  test_polish_1_0.py  test_pptx_fixtures.py  test_public_surface_additive.py  test_registry_production_mode.py  test_requirements_dev_sync.py  test_scan_file_public_api.py  test_scan_timeout.py  test_summary_queue.py  test_summary_worker.py  test_text_fixtures.py  test_video_fixtures.py  test_xlsx_fixtures.py
tests/analyzers/: test_audio_analyzer.py  test_base.py  test_correlation.py  test_cross_modal_correlation.py  test_csv_analyzer.py  test_csv_v1_1_2_payloads.py  test_docx_analyzer.py  test_docx_v1_1_2_payloads.py  test_eml_analyzer.py  test_eml_v1_1_2_payloads.py  test_fallback_analyzer.py  test_format_routing.py  test_html_analyzer.py  test_html_v1_1_2_payloads.py  test_image_analyzer.py  test_image_v1_1_2_payloads.py  test_json_analyzer.py  test_json_v1_1_2_payloads.py  test_object_analyzer.py  test_pdf_hidden_text_annotation.py  test_pdf_metadata_analyzer.py  test_pdf_off_page_text.py  test_pdf_trailer_analyzer.py  test_pptx_analyzer.py  test_registry.py  test_svg_analyzer.py  test_text_analyzer.py  test_text_file_analyzer.py  test_v1_1_8_f2_calibration.py  test_video_analyzer.py  test_xlsx_analyzer.py  test_xlsx_v1_1_2_payloads.py
tests/api/: test_counter.py  test_demo.py  test_scan_endpoint_verdict.py
tests/application/: test_scan_limits_integration.py  test_scan_service.py
tests/domain/: test_config.py  test_exceptions.py  test_finding.py  test_integrity_report.py  test_mechanism_registry.py  test_scan_limits.py  test_value_objects.py
tests/fixtures/_fonts/: README.md
tests/infrastructure/: test_file_router.py  test_pdf_client.py  test_report_formatter.py
(+136 files in other folders)
